--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -20,8 +20,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/instructions_text_view"
+        android:id="@+id/tellJoke_bn"
         android:onClick="tellJoke"
         android:text="@string/button_text" />
+
+
+    <ProgressBar
+        android:id="@+id/pb_loading_indicator"
+        android:layout_width="@dimen/layout_42"
+        android:layout_height="@dimen/layout_42"
+        android:layout_gravity="center"
+        android:visibility="invisible" />
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
